--- a/src/main/resources/templates/instructorDashboard/indexUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/indexUpdate.html
@@ -75,8 +75,7 @@
 
 <!-- Template Functions -->
 <script th:src="@{/assets/js/functions.js}"></script>
-
-
+<script th:src="@{/js/instructorFilter.js}"></script>
 </body>
 
 </html>
