--- a/src/main/resources/templates/instructorDashboard/fragments/orderDetailsContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/orderDetailsContent.html
@@ -4,7 +4,7 @@
             No order details found for your courses.
         </div>
         <div class="d-flex justify-content-end mt-3">
-            <a th:href="@{/instructordashboard/orders}" class="btn btn-outline-secondary me-2">
+            <a th:href="@{/instructor/orders}" class="btn btn-outline-secondary me-2">
                 <i class="bi bi-arrow-left"></i> Back to Orders
             </a>
         </div>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="d-flex justify-content-end mt-3">
-            <a th:href="@{/instructordashboard/orders}" class="btn btn-outline-secondary me-2">
+            <a th:href="@{/instructor/orders}" class="btn btn-outline-secondary me-2">
                 <i class="bi bi-arrow-left"></i> Back to Orders
             </a>
         </div>
