--- a/src/main/resources/templates/instructorDashboard/fragments/ordersContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/ordersContent.html
@@ -51,8 +51,8 @@
     </form>
 
     <!-- Hiển thị danh sách payments -->
-    <table class="table table-striped table-hover table-bordered">
-      <thead>
+    <table class="table course-table table-hover table-bordered">
+      <thead style="background: #fff;">
       <tr>
         <th>Order ID</th>
         <th>Amount</th>
