--- a/src/main/resources/templates/homePage/fragments/navHeader.html
+++ b/src/main/resources/templates/homePage/fragments/navHeader.html
@@ -129,7 +129,7 @@
                         <span id="userNotificationBadge" th:if="${unreadCount > 0}" class="notif-badge animation-blink"></span>
                     </a>
                     <!-- Notification dropdown menu START -->
-                    <div class="dropdown-menu dropdown-animation dropdown-menu-end dropdown-menu-size-md p-0 shadow-lg border-0">
+                    <div class="dropdown-menu dropdown-animation dropdown-menu-end dropdown-menu-size-md p-0 shadow-lg border-0" style="width:220px;min-width:220px;max-width:220px;border:1px solid #ddd;">
                         <div class="card bg-transparent">
                             <div class="card-header bg-transparent border-bottom py-4 d-flex justify-content-between align-items-center">
                                 <h6 class="m-0">Unread Notifications <span id="userNotificationCount" class="badge bg-danger bg-opacity-10 text-danger ms-2">0 new</span></h6>
@@ -140,7 +140,7 @@
                                 </ul>
                             </div>
                             <!-- Button -->
-                            <div class="card-footer bg-transparent border-0 py-3 text-center position-relative">
+                            <div class="card-footer bg-transparent border-0 py-3 text-center position-relative" style="padding-top:0;">
                                 <a th:href="@{/user/notifications}" class="stretched-link">View all notifications</a>
                             </div>
                         </div>
