--- a/src/main/resources/templates/homePage/index-4.html
+++ b/src/main/resources/templates/homePage/index-4.html
@@ -72,7 +72,7 @@
 	</script>
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="assets/images/favicon.ico">
+	<link rel="shortcut icon" href="/assets/images/favicon.ico">
 
 	<!-- Google Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -1216,7 +1216,7 @@ Live courses START -->
 	<figure class="position-absolute top-50 start-0 translate-middle-y ms-5 d-none d-xxl-block">
 		<svg width="29px" height="29px">
 			<path class="fill-orange" d="M29.004,14.502 C29.004,22.512 22.511,29.004 14.502,29.004 C6.492,29.004 -0.001,22.512 -0.001,14.502 C-0.001,6.492 6.492,-0.001 14.502,-0.001 C22.511,-0.001 29.004,6.492 29.004,14.502 Z"></path>
-			</svg>
+		</svg>
 	</figure>
 
 	<!-- SVG decoration -->
