update role access

--- a/src/main/resources/templates/instructorDashboard/fragments/courseAdded.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/courseAdded.html
@@ -31,7 +31,7 @@
                 <!-- Subtitle -->
                 <p>We will review your item shortly. You will be informed by email that your course has been accepted. Also, make sure your Payment and Tax information is correct and valid.</p>
 
-                <a th:href="@{/instructordashboard/courses}" class="btn btn-primary-soft mb-5">Back to Course Management</a>
+                <a th:href="@{/instructor/courses}" class="btn btn-primary-soft mb-5">Back to Course Management</a>
                 <div class="modal fade" id="termsModal" tabindex="-1" aria-labelledby="termsModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
